--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="AimTheHole/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Weefle/Desktop/BuildTools/spigot-1.11.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Weefle/Desktop/Spigot/spigot-1.12-pre2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
