--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="AimTheHole/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Weefle/Desktop/Spigot/spigot-1.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Weefle/Documents/mc/spigot-1.12.2-R0.1-SNAPSHOT-b1595.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
